examples/__outputs__/30_gql/gql_gql-string_gql-typed__gql-string-typed.output.txt
/some/path/to/gql_gql-string_gql-typed__gql-string-typed.ts:XX:XX
const data = await graffle.gql(document).send({ name: `Pikachu` })
                           ^


TypeError: graffle.gql is not a function
    at <anonymous> (/some/path/to/gql_gql-string_gql-typed__gql-string-typed.ts:XX:XX:28)
    at ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX